test_suite5/ALAN/test_suite/alan-2022-examples/failing/000450_mutation.alan
source Tu6Ga begin < leave end
